--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -11,6 +11,7 @@ go_library(
         "buffer.go",
         "const.go",
         "doc.go",
+        "enum.go",
         "glob.go",
         "match.go",
         "parse.go",
@@ -20,11 +21,9 @@ go_library(
         "runematch_neg_any.go",
         "runematch_neg_is.go",
         "runematch_neg_range.go",
-        "runematch_not.go",
+        "runematch_neg_set.go",
         "runematch_range.go",
         "runematch_set.go",
-        "segment.go",
-        "types.go",
         "util.go",
     ],
     importpath = "github.com/chronos-tachyon/go-glob",
