--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ install:
 - go get github.com/mattn/goveralls
 - go get
 script:
-- go test -v -covermode=count -coverprofile=coverage.out
+- go test -v -covermode=count -coverprofile=coverage.out ./...
 - "$HOME/gopath/bin/goveralls -coverprofile=coverage.out -service=travis-ci"
 env:
   global:
