--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
 - go get
 script:
 - go test -v -covermode=count -coverprofile=coverage.out ./...
-- "$HOME/gopath/bin/goveralls -coverprofile=coverage.out -service=travis-ci"
+- "$GOPATH/bin/goveralls -coverprofile=coverage.out -service=travis-pro"
 env:
   global:
   - GO111MODULE=on
